setting up for deployment

--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "First TODO app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "author": "Sahil Gupta",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "moment": "^2.29.1",
